Avoid tab labels overlapping note label

--- a/src/components/Dialog-Window/Tabs/DialogTabs.module.scss
+++ b/src/components/Dialog-Window/Tabs/DialogTabs.module.scss
@@ -14,10 +14,11 @@
   user-select: none;
   cursor: pointer;
   max-width: min-content;
+  border-bottom: 2px solid #eee;
 
   &[data-state="active"] {
     font-weight: 800;
-    box-shadow: 0 2.5px 0 -0.5px #2360c5;
+    border-bottom: 2px solid #2360c5;
   }
 
   &:focus {
@@ -28,8 +29,9 @@
 .list {
   flex-shrink: 0;
   display: flex;
-  border-bottom: 2px solid #eee;
+  box-shadow: inset 0 -2px 0 #eee;
   margin-bottom: 1rem;
+  overflow-x: auto;
 }
 
 .tabs {
